// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu should render 1`] = `
<ul
  className="sc-AxhUy ijoyzq"
/>
`;

exports[`Menu should render closed menu 1`] = `
<ul
  className="sc-AxhUy ijoyzq"
>
  <li
    className="sc-AxgMl fdAvPR"
  >
    <div
      className="sc-AxiKw iCNkRr"
      fontFamily="exo"
      size="normal"
    >
      <a
        href="#home"
      >
        <div
          className="sc-AxheI dkiJtT"
        >
          <span
            className="sc-AxhCb hAhMuW sc-AxjAm jWlVxK lni lni-home"
          />
          <span
            className="sc-Axmtr hZJHVn menu-text"
          >
            Home
          </span>
        </div>
      </a>
    </div>
  </li>
  <li
    className="sc-AxgMl fdAvPR"
  >
    <div
      className="sc-AxiKw iCNkRr"
      fontFamily="exo"
      size="normal"
    >
      <a
        href="#users"
      >
        <div
          className="sc-AxheI dkiJtT"
        >
          <span
            className="sc-AxhCb hAhMuW sc-AxjAm jWlVxK lni lni-users"
          />
          <span
            className="sc-Axmtr hZJHVn menu-text"
          >
            Users
          </span>
        </div>
      </a>
    </div>
  </li>
  <li
    className="sc-AxgMl fdAvPR"
  >
    <div
      className="sc-AxiKw iCNkRr"
      fontFamily="exo"
      size="normal"
    >
      <a
        href="#devices"
      >
        <div
          className="sc-AxheI dkiJtT"
        >
          <span
            className="sc-AxhCb hAhMuW sc-AxjAm jWlVxK lni lni-rocket"
          />
          <span
            className="sc-Axmtr hZJHVn menu-text"
          >
            Devices
          </span>
        </div>
      </a>
    </div>
  </li>
  <li
    className="sc-AxgMl fdAvPR"
  >
    <div
      className="sc-AxiKw iCNkRr"
      fontFamily="exo"
      size="normal"
    >
      <a
        href="#costs"
      >
        <div
          className="sc-AxheI dkiJtT"
        >
          <span
            className="sc-AxhCb hAhMuW sc-AxjAm jWlVxK lni lni-briefcase"
          />
          <span
            className="sc-Axmtr hZJHVn menu-text"
          >
            Costs
          </span>
        </div>
      </a>
    </div>
  </li>
</ul>
`;

exports[`Menu should render items 1`] = `
<ul
  className="sc-AxhUy ijoyzq"
>
  <li
    className="sc-AxgMl fdAvPR"
  >
    <div
      className="sc-AxiKw iCNkRr"
      fontFamily="exo"
      size="normal"
    >
      <a
        href="#home"
      >
        <div
          className="sc-AxheI dkiJtT"
        >
          <span
            className="sc-AxhCb hAhMuW sc-AxjAm jWlVxK lni lni-home"
          />
          <span
            className="sc-Axmtr hZKuXu menu-text"
          >
            Home
          </span>
        </div>
      </a>
    </div>
  </li>
  <li
    className="sc-AxgMl fdAvPR"
  >
    <div
      className="sc-AxiKw iCNkRr"
      fontFamily="exo"
      size="normal"
    >
      <a
        href="#users"
      >
        <div
          className="sc-AxheI dkiJtT"
        >
          <span
            className="sc-AxhCb hAhMuW sc-AxjAm jWlVxK lni lni-users"
          />
          <span
            className="sc-Axmtr hZKuXu menu-text"
          >
            Users
          </span>
        </div>
      </a>
    </div>
  </li>
  <li
    className="sc-AxgMl fdAvPR"
  >
    <div
      className="sc-AxiKw iCNkRr"
      fontFamily="exo"
      size="normal"
    >
      <a
        href="#devices"
      >
        <div
          className="sc-AxheI dkiJtT"
        >
          <span
            className="sc-AxhCb hAhMuW sc-AxjAm jWlVxK lni lni-rocket"
          />
          <span
            className="sc-Axmtr hZKuXu menu-text"
          >
            Devices
          </span>
        </div>
      </a>
    </div>
  </li>
  <li
    className="sc-AxgMl fdAvPR"
  >
    <div
      className="sc-AxiKw iCNkRr"
      fontFamily="exo"
      size="normal"
    >
      <a
        href="#costs"
      >
        <div
          className="sc-AxheI dkiJtT"
        >
          <span
            className="sc-AxhCb hAhMuW sc-AxjAm jWlVxK lni lni-briefcase"
          />
          <span
            className="sc-Axmtr hZKuXu menu-text"
          >
            Costs
          </span>
        </div>
      </a>
    </div>
  </li>
</ul>
`;

exports[`Menu should render open menu 1`] = `
<ul
  className="sc-AxhUy ijoyzq"
>
  <li
    className="sc-AxgMl fdAvPR"
  >
    <div
      className="sc-AxiKw iCNkRr"
      fontFamily="exo"
      size="normal"
    >
      <a
        href="#home"
      >
        <div
          className="sc-AxheI dkiJtT"
        >
          <span
            className="sc-AxhCb hAhMuW sc-AxjAm jWlVxK lni lni-home"
          />
          <span
            className="sc-Axmtr hZKuXu menu-text"
          >
            Home
          </span>
        </div>
      </a>
    </div>
  </li>
  <li
    className="sc-AxgMl fdAvPR"
  >
    <div
      className="sc-AxiKw iCNkRr"
      fontFamily="exo"
      size="normal"
    >
      <a
        href="#users"
      >
        <div
          className="sc-AxheI dkiJtT"
        >
          <span
            className="sc-AxhCb hAhMuW sc-AxjAm jWlVxK lni lni-users"
          />
          <span
            className="sc-Axmtr hZKuXu menu-text"
          >
            Users
          </span>
        </div>
      </a>
    </div>
  </li>
  <li
    className="sc-AxgMl fdAvPR"
  >
    <div
      className="sc-AxiKw iCNkRr"
      fontFamily="exo"
      size="normal"
    >
      <a
        href="#devices"
      >
        <div
          className="sc-AxheI dkiJtT"
        >
          <span
            className="sc-AxhCb hAhMuW sc-AxjAm jWlVxK lni lni-rocket"
          />
          <span
            className="sc-Axmtr hZKuXu menu-text"
          >
            Devices
          </span>
        </div>
      </a>
    </div>
  </li>
  <li
    className="sc-AxgMl fdAvPR"
  >
    <div
      className="sc-AxiKw iCNkRr"
      fontFamily="exo"
      size="normal"
    >
      <a
        href="#costs"
      >
        <div
          className="sc-AxheI dkiJtT"
        >
          <span
            className="sc-AxhCb hAhMuW sc-AxjAm jWlVxK lni lni-briefcase"
          />
          <span
            className="sc-Axmtr hZKuXu menu-text"
          >
            Costs
          </span>
        </div>
      </a>
    </div>
  </li>
</ul>
`;

exports[`Menu should render without link component 1`] = `
<ul
  className="sc-AxhUy ijoyzq"
>
  <li
    className="sc-AxgMl fdAvPR"
  >
    <div
      className="sc-AxiKw iCNkRr"
      fontFamily="exo"
      size="normal"
    >
      <div
        className="sc-AxheI dkiJtT"
      >
        <span
          className="sc-AxhCb hAhMuW sc-AxjAm jWlVxK lni lni-home"
        />
        <span
          className="sc-Axmtr hZKuXu menu-text"
        >
          Home
        </span>
      </div>
    </div>
  </li>
</ul>
`;
